# vtk2grav

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  version.h.in
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Forward/include/: Cube.h  stdfunc.h
Forward/src/: CMakeLists.txt  Cube.cpp
NormalGravity/: CMakeLists.txt  NormalGravity.cpp
data_test/: .gitignore  MAR_Atlantis_sites_103097.xyz  run.sh
include/: cmd.h
src/: CMakeLists.txt  cmd.cpp
tests/: .gitignore  cube_grav.grd  sites.xy  test_cube.cpp  test_cube.sh
